send public cloud events for online/offline